try: add chart #2

--- a/src/components/Chart/Chart.module.scss
+++ b/src/components/Chart/Chart.module.scss
@@ -1,58 +1,4 @@
-// .chartBlock {
-//     padding-block: 40px;
-// }
 .chartBlock {
-    position: relative;
-}
-
-.chartContainer {
-    position: relative;
-    display: flex;
-    justify-content: flex-start;
-}
-
-.columnWrapper {
-    position: absolute;
-    bottom: 0;
-}
-
-.dbPart {
-    width: 80px;
-    background-color: var(--color-col-pink);
-    border-top-left-radius: 10px;
-}
-
-.backPart {
-    width: 80px;
-    background-color: var(--color-col-purple);
-}
-
-.frontPart {
-    width: 80px;
-    background-color: var(--color-col-blue);
-}
-
-.label {
-    position: absolute;
-    bottom: -20px;
-    text-align: center;
-    font-size: 14px;
-    color: var(--color-gray);
-}
-
-.normContainer {
-    position: absolute;
-    bottom: 0;
-    left: 440px;
-}
-
-.normBar {
-    width: 60px;
-    background: url(#stripes);
-}
-
-.normLabel {
-    text-align: center;
-    font-size: 14px;
-    color: var(--color-gray);
+    padding-block: 40px;
+    margin-inline: auto;
 }
