--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,3 +1,9 @@
+@use 'sass:math';
+
 @mixin fluid-text($min: 16, $max: 48) {
     font-size: clamp(#{$min}px, #{$max / 1440 * 100}vw, #{$max}px);
+}
+
+@function rem($value) {
+    @return math.div($value, 16) * 1rem;
 }
