--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,15 +1,15 @@
-:root {
-    --color-gray: #898290;
-    --color-col-blue: #4ab6e8;
-    --color-col-purple: #aa6fac;
-    --color-col-pink: #e85498;
-}
+// :root {
+//     --color-gray: #898290;
+//     --color-col-blue: #4ab6e8;
+//     --color-col-purple: #aa6fac;
+//     --color-col-pink: #e85498;
+// }
 
 $color-gray: #898290;
 $color-light: #ffffff;
-// $color-col-blue: #4ab6e8;
-// $color-col-purple: #aa6fac;
-// $color-col-pink: #e85498;
+$color-col-blue: #4ab6e8;
+$color-col-purple: #aa6fac;
+$color-col-pink: #e85498;
 $color-diff-red: #fc440f;
 $color-diff-green: #00cc99;
 $color-diff-gray: #898290;
