--- a/src/components/Bar/Bar.module.scss
+++ b/src/components/Bar/Bar.module.scss
@@ -1,14 +1,30 @@
 @use '../../styles/variables' as var;
 @import '../../styles/mixins';
+@import '../../styles/media';
 
-.norm {
+.bar {
     display: flex;
+    flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
     width: rem(80);
     height: 70svh;
+    margin-right: 60px;
+    overflow: hidden;
     background-color: #4ab6e8;
-    border-radius: 10px;
+    border-radius: var.$border-radius-large;
+    > p {
+        align-self: center;
+        background-color: var.$color-light;
+        color: var.$color-gray;
+        border-radius: var.$border-radius-small;
+        padding: rem(5);
+        font-weight: 700;
+    }
+    @include mobile {
+        margin-right: 20px;
+        width: rem(60);
+    }
 }
 .item {
     height: 100%;
