--- a/src/layout/Main.module.scss
+++ b/src/layout/Main.module.scss
@@ -1,5 +1,6 @@
 @use '../styles/variables' as var;
 @use '../styles/mixins';
+@import '../styles/media';
 
 .content {
     // background-color: #794343;
@@ -24,6 +25,9 @@
         align-items: center;
         height: 40px;
         gap: 47px;
+        @include mobile {
+            gap: 27px;
+        }
         p {
             display: flex;
             align-items: center;
