--- a/src/components/ChartBox/ChartBox.module.scss
+++ b/src/components/ChartBox/ChartBox.module.scss
@@ -2,19 +2,54 @@
 @import '../../styles/mixins';
 
 .chartBlock {
-    padding-block: 40px 30px;
+    padding-block: 20px 30px;
     margin-inline: auto;
     display: flex;
-    align-items: flex-end;
+    flex-direction: column;
     color: var.$color-light;
+
+    position: relative;
+    svg {
+        pointer-events: none; /* Чтобы SVG не блокировал клики по другим элементам */
+    }
 }
 
 .list {
     display: flex;
     align-items: flex-end;
-
+    margin: 10px 0px;
     li:last-child {
         background-color: var.$color-col-blue;
         background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffffff' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M0 20L20 0H13L0 13M20 20V13L13 20'/%3E%3C/g%3E%3C/svg%3E");
+    }
+}
+
+.element1,
+.element2 {
+    width: 100px;
+    height: 50px;
+    background-color: rgb(228, 108, 108);
+    border: 1px solid #000;
+    position: absolute;
+}
+.element1 {
+    top: 200px;
+    left: 0px;
+}
+.element2 {
+    top: 200px;
+    left: 280px;
+}
+
+.diffPanel {
+    display: grid;
+    grid-template-columns: 80px 60px 80px 60px;
+    justify-items: center;
+    margin-bottom: 50px;
+    div:nth-child(1) {
+        grid-column: 2/3;
+    }
+    div:nth-child(2) {
+        grid-column: 4/5;
     }
 }
