finish: Требуемое ТЗ готово

--- a/src/components/ButtonMenu/Button.module.scss
+++ b/src/components/ButtonMenu/Button.module.scss
@@ -41,7 +41,7 @@
         color: currentColor;
     }
 }
-.checked {
+.active {
     background-color: var.$color-col-blue;
     color: var.$color-light;
 }
